--- a/iris_k_tree.ipynb
+++ b/iris_k_tree.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,22 +94,150 @@
     "x_sample=x[:120,:]\n",
     "y_sample=y[:120]\n",
     "x_pre=x[120:,:]\n",
-    "y_pre=y[120:,:]"
+    "y_pre=y[120:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.08333333  0.08333333 -0.01694915 -0.04166667]\n",
+      " [ 0.19444444 -0.125       0.08474576  0.08333333]\n",
+      " [-0.08333333  0.41666667 -0.42372881 -0.45833333]\n",
+      " [ 0.         -0.04166667 -0.03389831 -0.08333333]\n",
+      " [-0.25        0.29166667 -0.44067797 -0.45833333]\n",
+      " [-0.16666667  0.25       -0.42372881 -0.5       ]\n",
+      " [-0.02777778  0.375      -0.42372881 -0.375     ]\n",
+      " [-0.16666667  0.45833333 -0.44067797 -0.5       ]\n",
+      " [ 0.05555556  0.20833333  0.03389831 -0.04166667]\n",
+      " [-0.13888889  0.375      -0.40677966 -0.375     ]\n",
+      " [ 0.41666667  0.29166667  0.11864407  0.04166667]\n",
+      " [ 0.22222222  0.          0.15254237  0.08333333]\n",
+      " [-0.16666667  0.25       -0.42372881 -0.45833333]\n",
+      " [ 0.33333333  0.20833333  0.16949153  0.16666667]\n",
+      " [ 0.02777778  0.20833333  0.08474576  0.08333333]\n",
+      " [-0.30555556  0.20833333 -0.45762712 -0.45833333]\n",
+      " [-0.02777778  0.58333333 -0.45762712 -0.375     ]\n",
+      " [ 0.02777778  0.125       0.15254237  0.29166667]\n",
+      " [ 0.16666667  0.20833333  0.10169492  0.04166667]\n",
+      " [ 0.08333333  0.08333333  0.18644068  0.25      ]\n",
+      " [-0.16666667  0.20833333 -0.44067797 -0.45833333]\n",
+      " [-0.13888889  0.375      -0.42372881 -0.45833333]\n",
+      " [-0.30555556  0.16666667 -0.44067797 -0.45833333]\n",
+      " [-0.02777778  0.58333333 -0.38983051 -0.375     ]\n",
+      " [-0.02777778  0.20833333  0.08474576  0.08333333]\n",
+      " [ 0.22222222  0.33333333  0.11864407  0.125     ]\n",
+      " [-0.11111111  0.54166667 -0.40677966 -0.45833333]\n",
+      " [ 0.36111111  0.29166667  0.3220339   0.41666667]\n",
+      " [ 0.22222222  0.375       0.27118644  0.45833333]\n",
+      " [ 0.61111111  0.20833333  0.3559322   0.41666667]\n",
+      " [-0.02777778  0.5        -0.42372881 -0.45833333]\n",
+      " [ 0.         -0.08333333  0.          0.        ]\n",
+      " [ 0.16666667  0.125       0.11864407 -0.04166667]\n",
+      " [ 0.27777778  0.20833333  0.20338983  0.29166667]\n",
+      " [ 0.61111111  0.125       0.45762712  0.29166667]\n",
+      " [-0.22222222  0.29166667 -0.40677966 -0.45833333]\n",
+      " [-0.13888889  0.33333333 -0.44067797 -0.45833333]\n",
+      " [-0.19444444  0.25       -0.40677966 -0.45833333]\n",
+      " [-0.22222222  0.29166667 -0.45762712 -0.45833333]\n",
+      " [ 0.33333333  0.33333333  0.28813559  0.5       ]\n",
+      " [ 0.27777778  0.125       0.10169492  0.08333333]\n",
+      " [-0.19444444  0.375      -0.3559322  -0.45833333]\n",
+      " [ 0.          0.70833333 -0.44067797 -0.45833333]\n",
+      " [ 0.11111111  0.29166667  0.13559322  0.20833333]\n",
+      " [ 0.19444444  0.16666667  0.05084746  0.        ]\n",
+      " [ 0.13888889  0.16666667  0.08474576  0.08333333]\n",
+      " [ 0.25        0.125       0.27118644  0.33333333]\n",
+      " [ 0.05555556  0.04166667 -0.08474576 -0.125     ]\n",
+      " [-0.19444444  0.375      -0.40677966 -0.45833333]\n",
+      " [-0.08333333  0.66666667 -0.42372881 -0.5       ]\n",
+      " [-0.19444444  0.20833333 -0.44067797 -0.41666667]\n",
+      " [ 0.05555556  0.          0.16949153  0.29166667]\n",
+      " [-0.08333333  0.375      -0.44067797 -0.45833333]\n",
+      " [ 0.19444444  0.375       0.23728814  0.41666667]\n",
+      " [ 0.44444444  0.20833333  0.3220339   0.33333333]\n",
+      " [-0.27777778 -0.08333333 -0.45762712 -0.41666667]\n",
+      " [-0.11111111  0.54166667 -0.42372881 -0.41666667]\n",
+      " [-0.11111111  0.54166667 -0.3559322  -0.375     ]\n",
+      " [ 0.13888889 -0.125       0.16949153  0.08333333]\n",
+      " [ 0.11111111  0.20833333  0.03389831  0.08333333]\n",
+      " [ 0.33333333  0.20833333  0.20338983  0.41666667]\n",
+      " [-0.25        0.45833333 -0.50847458 -0.45833333]\n",
+      " [ 0.61111111  0.04166667  0.49152542  0.41666667]\n",
+      " [ 0.02777778  0.20833333  0.01694915  0.        ]\n",
+      " [-0.25        0.25       -0.42372881 -0.45833333]\n",
+      " [-0.11111111  0.375      -0.42372881 -0.45833333]\n",
+      " [ 0.30555556  0.16666667  0.10169492  0.        ]\n",
+      " [ 0.08333333  0.125       0.18644068  0.45833333]\n",
+      " [-0.11111111  0.5        -0.42372881 -0.375     ]\n",
+      " [ 0.66666667  0.54166667  0.40677966  0.29166667]\n",
+      " [ 0.          0.41666667 -0.45762712 -0.45833333]\n",
+      " [-0.16666667  0.          0.08474576  0.16666667]\n",
+      " [ 0.22222222  0.125       0.18644068  0.08333333]\n",
+      " [ 0.38888889  0.25        0.18644068  0.41666667]\n",
+      " [ 0.22222222 -0.08333333  0.06779661  0.        ]\n",
+      " [ 0.13888889 -0.125       0.         -0.125     ]\n",
+      " [ 0.25        0.25        0.25423729  0.20833333]\n",
+      " [ 0.25        0.29166667  0.08474576  0.08333333]\n",
+      " [ 0.33333333  0.25        0.27118644  0.45833333]\n",
+      " [-0.16666667 -0.04166667 -0.11864407 -0.125     ]\n",
+      " [ 0.52777778  0.125       0.3559322   0.25      ]\n",
+      " [ 0.16666667  0.125       0.          0.        ]\n",
+      " [ 0.05555556  0.125       0.01694915  0.        ]\n",
+      " [ 0.13888889  0.08333333  0.18644068  0.125     ]\n",
+      " [ 0.02777778  0.08333333  0.03389831  0.        ]\n",
+      " [ 0.16666667  0.20833333  0.15254237  0.20833333]\n",
+      " [ 0.08333333  0.08333333  0.01694915 -0.125     ]\n",
+      " [ 0.58333333  0.20833333  0.44067797  0.33333333]\n",
+      " [ 0.05555556  0.16666667  0.03389831  0.        ]\n",
+      " [ 0.02777778  0.16666667 -0.06779661  0.        ]\n",
+      " [-0.02777778  0.375      -0.38983051 -0.45833333]\n",
+      " [ 0.16666667  0.04166667  0.27118644  0.04166667]\n",
+      " [-0.13888889  0.45833333 -0.44067797 -0.45833333]\n",
+      " [ 0.38888889  0.29166667  0.28813559  0.41666667]\n",
+      " [ 0.19444444  0.125       0.13559322  0.20833333]\n",
+      " [-0.11111111  0.33333333 -0.38983051 -0.33333333]\n",
+      " [-0.13888889  0.29166667 -0.47457627 -0.45833333]\n",
+      " [ 0.61111111  0.54166667  0.45762712  0.375     ]\n",
+      " [ 0.47222222  0.29166667  0.33898305  0.20833333]\n",
+      " [ 0.33333333  0.25        0.06779661  0.04166667]\n",
+      " [ 0.         -0.04166667 -0.05084746 -0.125     ]\n",
+      " [ 0.36111111  0.20833333  0.25423729  0.33333333]\n",
+      " [-0.19444444  0.20833333 -0.44067797 -0.5       ]\n",
+      " [ 0.33333333  0.33333333  0.28813559  0.33333333]\n",
+      " [ 0.22222222  0.          0.16949153  0.25      ]\n",
+      " [ 0.33333333  0.          0.30508475  0.20833333]\n",
+      " [ 0.16666667  0.16666667  0.11864407  0.04166667]\n",
+      " [ 0.38888889  0.25        0.15254237  0.08333333]\n",
+      " [ 0.05555556  0.125       0.08474576  0.        ]\n",
+      " [ 0.25        0.125       0.27118644  0.375     ]\n",
+      " [-0.05555556  0.5        -0.42372881 -0.45833333]\n",
+      " [ 0.05555556  0.54166667 -0.38983051 -0.41666667]\n",
+      " [-0.11111111  0.41666667 -0.44067797 -0.41666667]\n",
+      " [ 0.08333333  0.625      -0.47457627 -0.45833333]\n",
+      " [ 0.25        0.08333333  0.22033898  0.25      ]\n",
+      " [-0.33333333  0.20833333 -0.49152542 -0.5       ]\n",
+      " [-0.11111111  0.41666667 -0.44067797 -0.45833333]\n",
+      " [ 0.11111111  0.20833333  0.18644068  0.20833333]\n",
+      " [ 0.5         0.16666667  0.38983051  0.20833333]\n",
+      " [ 0.30555556  0.20833333  0.06779661  0.04166667]]\n"
+     ]
+    }
+   ],
    "source": [
     "#定义一个预测方法，输入样本和需要预测的数据，以及k\n",
     "def prediction(x_sample,y_sample,x_pre,k):\n",
     "    #计算x_pre到样本的距离\n",
-    "    distance=np.power(x_sample,2)-np.power(y_sample,2)\n",
+    "    distance=(x_sample-x_pre).sum()\n",
+    "\n",
     "    print(distance)\n",
     "\n",
-    "prediction(x_sample,y_sample,x_pre,5)"
+    "prediction(x_sample,y_sample,x_pre[0,:],5)"
    ]
   }
  ],
